tests/invalidTest/other/array_neg_size.q
# EXPECT the size of array must be unsigned number
def void errorDef(){
    sint8* a = new sint8[-1]
}